src/test/ui/impl-trait/static-return-lifetime-infered.stderr
error[E0700]: hidden type for `impl Trait` captures lifetime that does not appear in bounds
  --> $DIR/static-return-lifetime-infered.rs:6:35
   |
LL |     fn iter_values_anon(&self) -> impl Iterator<Item=u32> {
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^
   |
note: hidden type `Map<std::slice::Iter<'_, (u32, u32)>, [closure@$DIR/static-return-lifetime-infered.rs:11:27: 11:34]>` captures lifetime smaller than the function body
  --> $DIR/static-return-lifetime-infered.rs:6:35
   |
LL |     fn iter_values_anon(&self) -> impl Iterator<Item=u32> {
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^

error[E0700]: hidden type for `impl Trait` captures lifetime that does not appear in bounds
  --> $DIR/static-return-lifetime-infered.rs:6:35
   |
LL |     fn iter_values_anon(&self) -> impl Iterator<Item=u32> {
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^
   |
note: hidden type `Map<std::slice::Iter<'_, (u32, u32)>, [closure@$DIR/static-return-lifetime-infered.rs:11:27: 11:34]>` captures lifetime smaller than the function body
  --> $DIR/static-return-lifetime-infered.rs:6:35
   |
LL |     fn iter_values_anon(&self) -> impl Iterator<Item=u32> {
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^

error[E0700]: hidden type for `impl Trait` captures lifetime that does not appear in bounds
  --> $DIR/static-return-lifetime-infered.rs:6:35
   |
LL |     fn iter_values_anon(&self) -> impl Iterator<Item=u32> {
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^
   |
note: hidden type `Map<std::slice::Iter<'_, (u32, u32)>, [closure@$DIR/static-return-lifetime-infered.rs:11:27: 11:34]>` captures lifetime smaller than the function body
  --> $DIR/static-return-lifetime-infered.rs:6:35
   |
LL |     fn iter_values_anon(&self) -> impl Iterator<Item=u32> {
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^

error[E0700]: hidden type for `impl Trait` captures lifetime that does not appear in bounds
  --> $DIR/static-return-lifetime-infered.rs:6:35
   |
LL |     fn iter_values_anon(&self) -> impl Iterator<Item=u32> {
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^
   |
note: hidden type `Map<std::slice::Iter<'_, (u32, u32)>, [closure@$DIR/static-return-lifetime-infered.rs:11:27: 11:34]>` captures lifetime smaller than the function body
  --> $DIR/static-return-lifetime-infered.rs:6:35
   |
LL |     fn iter_values_anon(&self) -> impl Iterator<Item=u32> {
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^

error[E0700]: hidden type for `impl Trait` captures lifetime that does not appear in bounds
  --> $DIR/static-return-lifetime-infered.rs:13:37
   |
LL |     fn iter_values<'a>(&'a self) -> impl Iterator<Item=u32> {
   |                                     ^^^^^^^^^^^^^^^^^^^^^^^
   |
note: hidden type `Map<std::slice::Iter<'_, (u32, u32)>, [closure@$DIR/static-return-lifetime-infered.rs:18:27: 18:34]>` captures lifetime smaller than the function body
  --> $DIR/static-return-lifetime-infered.rs:13:37
   |
LL |     fn iter_values<'a>(&'a self) -> impl Iterator<Item=u32> {
   |                                     ^^^^^^^^^^^^^^^^^^^^^^^

error[E0700]: hidden type for `impl Trait` captures lifetime that does not appear in bounds
  --> $DIR/static-return-lifetime-infered.rs:13:37
   |
LL |     fn iter_values<'a>(&'a self) -> impl Iterator<Item=u32> {
   |                                     ^^^^^^^^^^^^^^^^^^^^^^^
   |
note: hidden type `Map<std::slice::Iter<'_, (u32, u32)>, [closure@$DIR/static-return-lifetime-infered.rs:18:27: 18:34]>` captures lifetime smaller than the function body
  --> $DIR/static-return-lifetime-infered.rs:13:37
   |
LL |     fn iter_values<'a>(&'a self) -> impl Iterator<Item=u32> {
   |                                     ^^^^^^^^^^^^^^^^^^^^^^^

error[E0700]: hidden type for `impl Trait` captures lifetime that does not appear in bounds
  --> $DIR/static-return-lifetime-infered.rs:13:37
   |
LL |     fn iter_values<'a>(&'a self) -> impl Iterator<Item=u32> {
   |                                     ^^^^^^^^^^^^^^^^^^^^^^^
   |
note: hidden type `Map<std::slice::Iter<'_, (u32, u32)>, [closure@$DIR/static-return-lifetime-infered.rs:18:27: 18:34]>` captures lifetime smaller than the function body
  --> $DIR/static-return-lifetime-infered.rs:13:37
   |
LL |     fn iter_values<'a>(&'a self) -> impl Iterator<Item=u32> {
   |                                     ^^^^^^^^^^^^^^^^^^^^^^^

error[E0700]: hidden type for `impl Trait` captures lifetime that does not appear in bounds
  --> $DIR/static-return-lifetime-infered.rs:13:37
   |
LL |     fn iter_values<'a>(&'a self) -> impl Iterator<Item=u32> {
   |                                     ^^^^^^^^^^^^^^^^^^^^^^^
   |
note: hidden type `Map<std::slice::Iter<'_, (u32, u32)>, [closure@$DIR/static-return-lifetime-infered.rs:18:27: 18:34]>` captures lifetime smaller than the function body
  --> $DIR/static-return-lifetime-infered.rs:13:37
   |
LL |     fn iter_values<'a>(&'a self) -> impl Iterator<Item=u32> {
   |                                     ^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0700`.
